--- a/smartlivestock/smartlivestock/Views/Prescriptions/Index.cshtml
+++ b/smartlivestock/smartlivestock/Views/Prescriptions/Index.cshtml
@@ -102,7 +102,7 @@
                 @item.PresName
             </td>
             <td>
-               @item.Name
+               @item.ReName
             </td>
             <td>
               @item.Phone
