--- a/smartlivestock/smartlivestock/Views/Registrations/Index.cshtml
+++ b/smartlivestock/smartlivestock/Views/Registrations/Index.cshtml
@@ -105,7 +105,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.ReName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PtnId)
@@ -132,7 +132,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.ReName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PtnId)
