--- a/smartlivestock/smartlivestock/Views/Registrations/Create.cshtml
+++ b/smartlivestock/smartlivestock/Views/Registrations/Create.cshtml
@@ -11,9 +11,9 @@
         <form asp-action="Create" class="col-12 col-md-3 col-lg-6 bg-light bg-gradient p-4 border" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" required/>
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="ReName" class="control-label"></label>
+                <input asp-for="ReName" class="form-control" required/>
+                <span asp-validation-for="ReName" class="text-danger"></span>
             </div>
 
             <div class="form-group">
