--- a/smartlivestock/smartlivestock/Views/Registrations/Edit.cshtml
+++ b/smartlivestock/smartlivestock/Views/Registrations/Edit.cshtml
@@ -13,9 +13,9 @@
             <input type="hidden" asp-for="RegiId" />
             <input type="hidden" asp-for="PtnId" />
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="ReName" class="control-label"></label>
+                <input asp-for="ReName" class="form-control" />
+                <span asp-validation-for="ReName" class="text-danger"></span>
             </div>
 
             <div class="form-group">
