--- a/smartlivestock/smartlivestock/Views/Shared/_LoginPartial.cshtml
+++ b/smartlivestock/smartlivestock/Views/Shared/_LoginPartial.cshtml
@@ -26,7 +26,7 @@
                 <div class="dropdown-content">
 
 
-                    <a asp-action="Edit" asp-controller="Home" asp-route-loginId="@name"><i class="fa fa-user" style="font-size:20px"></i> Profile</a>
+                    <a asp-action="UserInformationsUpdated" asp-controller="Home" asp-route-loginId="@name"><i class="fa fa-user" style="font-size:20px"></i> Profile</a>
 
                     <a  asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><i class="fa fa-shield" style="font-size:20px"></i> Security</a>
             
