--- a/smartlivestock/smartlivestock/Views/Advices/Index.cshtml
+++ b/smartlivestock/smartlivestock/Views/Advices/Index.cshtml
@@ -110,9 +110,9 @@
                 Create Date
             </th>
             <th>
-                User Name
+                User Name 
             </th>
-            <th>Edit/View</th>
+            <th style="width:50px;">Edit</th>
         </tr>
     </thead>
     <tbody>
@@ -129,8 +129,7 @@
             </td>
             <td>
                 <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.AdvId">Edit</a>
-                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.AdvId">View</a>
-
+       
             </td>
         </tr>
 }
