--- a/smartlivestock/smartlivestock/Views/Home/UserInformationsUpdated.cshtml
+++ b/smartlivestock/smartlivestock/Views/Home/UserInformationsUpdated.cshtml
@@ -101,7 +101,7 @@
 
             <div class="form-group col-md-4">
                 <label asp-for="FacilityRegistryId" class="control-label">Select Header</label>
-                <select asp-for="FacilityRegistryId" class="form-control" asp-items="ViewBag.FacilityRegistryId"></select>
+                <select asp-for="FacilityRegistryId" class="form-control select2" asp-items="ViewBag.FacilityRegistryId"></select>
                 <span asp-validation-for="FacilityRegistryId" class="text-danger"></span>
             </div>
         
@@ -167,13 +167,16 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-    <script type="text/javascript">
-
-
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('.select2').select2();
+        });
     </script>
-
 }
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 
